Completed project proposal

--- a/proposal/bib.bib
+++ b/proposal/bib.bib
@@ -1,3 +1,166 @@
+
+
+
+@article{complex,
+	author = {Moertti, G},
+    title = {System-level design merits a closer look},  
+    journal = {EDN Asia},
+ 	month = feb,
+	year = 2002,
+	pages = {22--28}
+}  
+
+
+@article{hlstools,
+ author = {Meeus, Wim and Van Beeck, Kristof and Goedem{\'e}, Toon and Meel, Jan and Stroobandt, Dirk},
+ title = {An Overview of Today's High-level Synthesis Tools},
+ journal = {Des. Autom. Embedded Syst.},
+ issue_date = {September 2012},
+ volume = {16},
+ number = {3},
+ month = sep,
+ year = {2012},
+ issn = {0929-5585},
+ pages = {31--51},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1007/s10617-012-9096-8},
+ doi = {10.1007/s10617-012-9096-8},
+ acmid = {2701938},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Electronic system-level, High-level synthesis},
+} 
+
+
+@TECHREPORT{systemc,
+    author = {Stuart Swan and Cadence Design Systems},
+    title = {An introduction to system level modeling in systemc 2.0},
+    institution = {},
+    year = {2001}
+}
+
+@inproceedings{systemc2,
+ author = {Tabakov, Deian and Vardi, Moshe Y. and Kamhi, Gila and Singerman, Eli},
+ title = {A Temporal Language for SystemC},
+ booktitle = {Proceedings of the 2008 International Conference on Formal Methods in Computer-Aided Design},
+ series = {FMCAD '08},
+ year = {2008},
+ isbn = {978-1-4244-2735-2},
+ location = {Portland, Oregon},
+ pages = {22:1--22:9},
+ articleno = {22},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=1517424.1517446},
+ acmid = {1517446},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+} 
+
+
+@inproceedings{systemc3,
+  author = {khanovich A, Aboulhamid EM, Bois G},
+  title = {Object-oriented techniques in hardware modeling using SystemC}, 
+  booktitle = {Proceedings of Northeast workshop on circuits and systems},
+  location = {Montréal, Canada},
+  year ={2003},
+  month = {June}
+} 
+
+
+
+Synopsys, “Symphony C Compiler,”
+http://www.synopsys.com/Tools/SLD/HLS/Pages/SynphonyC-Compiler.aspx 
+
+@misc{syn,
+	author = {Synopsys},
+    title = {Symphony C Compiler},
+	url = {https://www.synopsys.com/Tools/Implementation/RTLSynthesis/Pages/SynphonyC-Compiler.aspx},	
+	howpublished ={Website},
+
+}
+
+@misc{catapult,
+	author = {Calypto},
+	title = {Catapult C},
+	url = {http://calypto.com/en/products/catapult/overview/},
+	howpublished = {Website},
+}
+
+
+@article{Handel-C,
+title ={"A Hardware Compiler Semantics for Handel-C},
+journal = "Electronic Notes in Theoretical Computer Science ",
+volume = "161",
+number = "",
+pages = "73 - 90",
+year = "2006",
+note = "Proceedings of the Third Irish Conference on the Mathematical Foundations of Computer Science and Information Technology (MFCSIT 2004)Proceedings of the Third Irish Conference on the Mathematical Foundations of Computer Science and Information Technology (MFCSIT 2004) ",
+issn = "1571-0661",
+doi = "http://dx.doi.org/10.1016/j.entcs.2006.04.026",
+url = "http://www.sciencedirect.com/science/article/pii/S1571066106004014",
+author = "Andrew Butterfield and Jim Woodcock",
+keywords = "Handel-C",
+keywords = "Hardware Compilation",
+keywords = "Denotational Semantics",
+keywords = "CSP "
+}
+
+
+@inproceedings{Handel-C2,
+  author    = {Steve Schneider and Helen Treharne and Alistair McEwan and Wilson Ifill},
+  title     = {Experiments in Translating {CSP} {\(\vert\)}{\(\vert\)} {B} to Handel-C},
+  booktitle = {The thirty-first Communicating Process Architectures Conference, {CPA}
+               2008, organised under the auspices of WoTUG and the Department of
+               Computer Science of the University of York, York, Yorkshire, UK, 7-10
+               September 2008},
+  pages     = {115--133},
+  year      = {2008},
+  crossref  = {DBLP:conf/wotug/2008},
+  url       = {http://dx.doi.org/10.3233/978-1-58603-907-3-115},
+  doi       = {10.3233/978-1-58603-907-3-115},
+  timestamp = {Mon, 02 Mar 2009 12:41:24 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/wotug/SchneiderTMI08},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@proceedings{DBLP:conf/wotug/2008,
+  editor    = {Peter H. Welch and
+               Susan Stepney and
+               Fiona Polack and
+               Fred R. M. Barnes and
+               Alistair A. McEwan and
+               Gardiner S. Stiles and
+               Jan F. Broenink and
+               Adam T. Sampson},
+  title     = {The thirty-first Communicating Process Architectures Conference, {CPA}
+               2008, organised under the auspices of WoTUG and the Department of
+               Computer Science of the University of York, York, Yorkshire, UK, 7-10
+               September 2008},
+  series    = {Concurrent Systems Engineering Series},
+  volume    = {66},
+  publisher = {{IOS} Press},
+  year      = {2008},
+  url       = {http://www.booksonline.iospress.nl/Content/View.aspx?piid=10444},
+  isbn      = {978-1-58603-907-3},
+  timestamp = {Mon, 02 Mar 2009 12:39:58 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/wotug/2008},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+
+@INPROCEEDINGS{accel,
+  author={Said, Y. and Saidani, T. and Atri, M.}, 
+  booktitle={Computer Applications and Information Systems (WCCAIS), 2014 World Congress on}, 
+  title={High-level design for image processing on FPGA using Xilinx AccelDSP}, 
+  year={2014}, 
+  pages={1-5}, 
+  keywords={field programmable gate arrays;hardware description languages;high level synthesis;image processing;FPGA;Xilinx AccelDSP;field programmable gate array;hardware description language;high level MATLAB description;high level design;image processing;Field programmable gate arrays;Generators;Hardware;Image color analysis;MATLAB;Mathematical model;Streaming media;FPGA;HLS tools;Image Processing;Matlab;Xilinx AccelDSP;design flow}, 
+  doi={10.1109/WCCAIS.2014.6916577}, 
+  month={Jan},
+}
+
+
 @article{transformations,
   author = {Vanderbauwhede, Wim},
   title = {Inferring Program Transformations from Type Transformations for Partitioning of Ordered Sets},
