--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -10,8 +10,9 @@
 
 \lstset{
   basicstyle=\small\ttfamily,
-  frame=lrtb,
-  numbers=left
+  frame=single,
+  numbers=left,
+  captionpos=b
 }
 
 \begin{document}
@@ -36,6 +37,7 @@
 \input{include/project_aims.tex}
 \input{include/background_reading.tex}
 \input{include/feasibility_study.tex}
+\input{include/project_plan.tex}
 
 %Biliography
 
