--- a/proposal/include/project_aims.tex
+++ b/proposal/include/project_aims.tex
@@ -8,7 +8,7 @@ whilst still preserving the results of the computations.
 
 We aim to model the framework as an EDSL (Embedded Domain Specific Language); this saves the tedious work
 of having to implement a custom DSL (Domain Specific Language) for this specific purpose, allowing us to use the 
-syntax and of the language used to implement the framework. This also has the added benefit of being able to interpret 
+language constructs of the host language used to implement the framework. This also has the added benefit of being able to interpret 
 these programs on a typical desktop computing platform which can be useful for testing purposes before transforming into a 
 HDL. 
 
