Fixed planning section

--- a/proposal/include/project_plan.tex
+++ b/proposal/include/project_plan.tex
@@ -6,7 +6,7 @@ The project plan (illustrated in figure~\ref{fig:workPlan}) is described below
 
 \textbf{Project Proposal (Weeks 1-7)}:
 \begin{itemize}
-\item Researching, performing a feasibility study, and writing up this report.
+\item This time was allocated for researching literature relevant to the project, performing a feasibility study, and writing up this report.
 \end{itemize}
 
 \textbf{Implementation (Weeks 8-24)}: 
